# skipr

./: .gitignore  README.md  TODO  alpha-0.003  alpha-0.07  mnli.logs  mrpc.logs  policy_time  pyproject.toml  results.txt  run.sh  run_rte.sh  sst2.logs
logs/: qnli.logs  rte.logs
misc/: calc_metrics.py  encoder_time
skipr/: og.py  scratchpad  skip_bert.py  skip_trainer.py  utils.py
skipr/glue/: run_glue.py
